--- a/StockCoco/mainwindow.ui
+++ b/StockCoco/mainwindow.ui
@@ -108,9 +108,9 @@
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
-      <widget class="QWidget" name="tabCarrito" native="true">
+      <widget class="QWidget" name="tabCarrito">
        <attribute name="title">
         <string>Carrito</string>
        </attribute>
@@ -145,19 +145,161 @@
        <attribute name="title">
         <string>Stock</string>
        </attribute>
-       <widget class="QRadioButton" name="radioButton">
-        <property name="geometry">
-         <rect>
-          <x>350</x>
-          <y>210</y>
-          <width>112</width>
-          <height>23</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>RadioButton</string>
-        </property>
-       </widget>
+       <layout class="QVBoxLayout" name="verticalLayout_2">
+        <item>
+         <widget class="QGroupBox" name="groupBox">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>64</height>
+           </size>
+          </property>
+          <property name="title">
+           <string>Filtro de busqueda</string>
+          </property>
+          <widget class="QPushButton" name="btnUpdateTableStock">
+           <property name="geometry">
+            <rect>
+             <x>590</x>
+             <y>30</y>
+             <width>101</width>
+             <height>25</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Buscar</string>
+           </property>
+          </widget>
+          <widget class="QLabel" name="lblFiltro">
+           <property name="geometry">
+            <rect>
+             <x>10</x>
+             <y>34</y>
+             <width>81</width>
+             <height>17</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Filtrar por:</string>
+           </property>
+          </widget>
+          <widget class="QComboBox" name="cmbFiltro">
+           <property name="geometry">
+            <rect>
+             <x>100</x>
+             <y>30</y>
+             <width>86</width>
+             <height>25</height>
+            </rect>
+           </property>
+           <item>
+            <property name="text">
+             <string>item</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>cantidad</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>valor</string>
+            </property>
+           </item>
+          </widget>
+          <widget class="QLineEdit" name="edtTxtFiltro">
+           <property name="geometry">
+            <rect>
+             <x>190</x>
+             <y>30</y>
+             <width>391</width>
+             <height>25</height>
+            </rect>
+           </property>
+          </widget>
+          <widget class="QPushButton" name="btnCleanFiltro">
+           <property name="geometry">
+            <rect>
+             <x>700</x>
+             <y>30</y>
+             <width>101</width>
+             <height>25</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Limpiar filtro</string>
+           </property>
+          </widget>
+         </widget>
+        </item>
+        <item>
+         <widget class="QTableView" name="tableView">
+          <property name="showDropIndicator" stdset="0">
+           <bool>false</bool>
+          </property>
+          <property name="selectionMode">
+           <enum>QAbstractItemView::SingleSelection</enum>
+          </property>
+          <property name="selectionBehavior">
+           <enum>QAbstractItemView::SelectRows</enum>
+          </property>
+          <property name="sortingEnabled">
+           <bool>false</bool>
+          </property>
+          <attribute name="horizontalHeaderCascadingSectionResizes">
+           <bool>false</bool>
+          </attribute>
+          <attribute name="horizontalHeaderDefaultSectionSize">
+           <number>200</number>
+          </attribute>
+          <attribute name="horizontalHeaderHighlightSections">
+           <bool>false</bool>
+          </attribute>
+          <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+           <bool>false</bool>
+          </attribute>
+          <attribute name="horizontalHeaderStretchLastSection">
+           <bool>true</bool>
+          </attribute>
+          <attribute name="verticalHeaderVisible">
+           <bool>false</bool>
+          </attribute>
+          <attribute name="verticalHeaderCascadingSectionResizes">
+           <bool>false</bool>
+          </attribute>
+         </widget>
+        </item>
+        <item>
+         <widget class="QFrame" name="frame">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>45</height>
+           </size>
+          </property>
+          <property name="frameShape">
+           <enum>QFrame::NoFrame</enum>
+          </property>
+          <property name="frameShadow">
+           <enum>QFrame::Raised</enum>
+          </property>
+          <widget class="QPushButton" name="btnAddCarrito">
+           <property name="geometry">
+            <rect>
+             <x>40</x>
+             <y>10</y>
+             <width>131</width>
+             <height>25</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>agregar al carrito</string>
+           </property>
+          </widget>
+         </widget>
+        </item>
+       </layout>
       </widget>
       <widget class="QWidget" name="tabEditar">
        <attribute name="title">
