--- a/StockCoco/mainwindow.ui
+++ b/StockCoco/mainwindow.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Stock Pintureria de coco</string>
+   <string>Fusion Tex  -  Plataforma De Stock</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="sizePolicy">
@@ -114,32 +114,64 @@
        <attribute name="title">
         <string>Carrito</string>
        </attribute>
-       <widget class="QPushButton" name="pushButton">
-        <property name="geometry">
-         <rect>
-          <x>50</x>
-          <y>380</y>
-          <width>89</width>
-          <height>25</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>PushButton</string>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="lineEdit">
-        <property name="geometry">
-         <rect>
-          <x>250</x>
-          <y>200</y>
-          <width>113</width>
-          <height>25</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>ss</string>
-        </property>
-       </widget>
+       <layout class="QVBoxLayout" name="verticalLayout_3">
+        <item>
+         <widget class="QLineEdit" name="lineEdit">
+          <property name="text">
+           <string>ss</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QTableView" name="tblCarrito">
+          <property name="enabled">
+           <bool>true</bool>
+          </property>
+          <attribute name="horizontalHeaderStretchLastSection">
+           <bool>true</bool>
+          </attribute>
+         </widget>
+        </item>
+        <item>
+         <widget class="QGroupBox" name="groupBox_2">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>76</height>
+           </size>
+          </property>
+          <property name="title">
+           <string>GroupBox</string>
+          </property>
+          <widget class="QPushButton" name="btnClearCarrito">
+           <property name="geometry">
+            <rect>
+             <x>640</x>
+             <y>40</y>
+             <width>111</width>
+             <height>25</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Vaciar carrito</string>
+           </property>
+          </widget>
+          <widget class="QPushButton" name="pushButton_2">
+           <property name="geometry">
+            <rect>
+             <x>200</x>
+             <y>40</y>
+             <width>131</width>
+             <height>25</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Realizar compra</string>
+           </property>
+          </widget>
+         </widget>
+        </item>
+       </layout>
       </widget>
       <widget class="QWidget" name="tabStock">
        <attribute name="title">
@@ -275,7 +307,7 @@
           <property name="minimumSize">
            <size>
             <width>0</width>
-            <height>45</height>
+            <height>83</height>
            </size>
           </property>
           <property name="frameShape">
@@ -287,7 +319,7 @@
           <widget class="QPushButton" name="btnAddCarrito">
            <property name="geometry">
             <rect>
-             <x>40</x>
+             <x>600</x>
              <y>10</y>
              <width>131</width>
              <height>25</height>
@@ -295,6 +327,129 @@
            </property>
            <property name="text">
             <string>agregar al carrito</string>
+           </property>
+          </widget>
+          <widget class="QLabel" name="lblItem">
+           <property name="geometry">
+            <rect>
+             <x>139</x>
+             <y>10</y>
+             <width>41</width>
+             <height>17</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>ïtem :</string>
+           </property>
+          </widget>
+          <widget class="QLabel" name="lblValor">
+           <property name="geometry">
+            <rect>
+             <x>319</x>
+             <y>36</y>
+             <width>71</width>
+             <height>17</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Valor [$] :</string>
+           </property>
+          </widget>
+          <widget class="QLabel" name="lblCantStock">
+           <property name="geometry">
+            <rect>
+             <x>50</x>
+             <y>36</y>
+             <width>131</width>
+             <height>17</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Cantidad en stock :</string>
+           </property>
+          </widget>
+          <widget class="QLineEdit" name="edtTxtItem">
+           <property name="geometry">
+            <rect>
+             <x>190</x>
+             <y>3</y>
+             <width>331</width>
+             <height>25</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="frame">
+            <bool>true</bool>
+           </property>
+           <property name="readOnly">
+            <bool>true</bool>
+           </property>
+          </widget>
+          <widget class="QLineEdit" name="edtTxtValor">
+           <property name="geometry">
+            <rect>
+             <x>392</x>
+             <y>30</y>
+             <width>129</width>
+             <height>25</height>
+            </rect>
+           </property>
+           <property name="readOnly">
+            <bool>true</bool>
+           </property>
+          </widget>
+          <widget class="QLineEdit" name="edtTxtCantStock">
+           <property name="geometry">
+            <rect>
+             <x>190</x>
+             <y>30</y>
+             <width>121</width>
+             <height>25</height>
+            </rect>
+           </property>
+           <property name="readOnly">
+            <bool>true</bool>
+           </property>
+          </widget>
+          <widget class="QLineEdit" name="edtTxtCant">
+           <property name="enabled">
+            <bool>false</bool>
+           </property>
+           <property name="geometry">
+            <rect>
+             <x>190</x>
+             <y>57</y>
+             <width>331</width>
+             <height>25</height>
+            </rect>
+           </property>
+          </widget>
+          <widget class="QLabel" name="lblCant">
+           <property name="geometry">
+            <rect>
+             <x>35</x>
+             <y>60</y>
+             <width>151</width>
+             <height>20</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Cantidad de compra :</string>
+           </property>
+          </widget>
+          <widget class="QLabel" name="lblAviso">
+           <property name="geometry">
+            <rect>
+             <x>550</x>
+             <y>60</y>
+             <width>251</width>
+             <height>17</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string/>
            </property>
           </widget>
          </widget>
