--- a/StockCoco/mainwindow.ui
+++ b/StockCoco/mainwindow.ui
@@ -127,13 +127,22 @@
           <property name="enabled">
            <bool>true</bool>
           </property>
+          <property name="showDropIndicator" stdset="0">
+           <bool>false</bool>
+          </property>
+          <property name="selectionMode">
+           <enum>QAbstractItemView::SingleSelection</enum>
+          </property>
+          <property name="selectionBehavior">
+           <enum>QAbstractItemView::SelectRows</enum>
+          </property>
           <attribute name="horizontalHeaderStretchLastSection">
            <bool>true</bool>
           </attribute>
          </widget>
         </item>
         <item>
-         <widget class="QGroupBox" name="groupBox_2">
+         <widget class="QGroupBox" name="grpResumenCarrito">
           <property name="minimumSize">
            <size>
             <width>0</width>
@@ -141,7 +150,7 @@
            </size>
           </property>
           <property name="title">
-           <string>GroupBox</string>
+           <string>Resumen del Carrito</string>
           </property>
           <widget class="QPushButton" name="btnClearCarrito">
            <property name="geometry">
@@ -156,10 +165,10 @@
             <string>Vaciar carrito</string>
            </property>
           </widget>
-          <widget class="QPushButton" name="pushButton_2">
+          <widget class="QPushButton" name="btnComprar">
            <property name="geometry">
             <rect>
-             <x>200</x>
+             <x>430</x>
              <y>40</y>
              <width>131</width>
              <height>25</height>
@@ -167,6 +176,32 @@
            </property>
            <property name="text">
             <string>Realizar compra</string>
+           </property>
+          </widget>
+          <widget class="QLabel" name="label">
+           <property name="geometry">
+            <rect>
+             <x>10</x>
+             <y>44</y>
+             <width>61</width>
+             <height>17</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>TOTAL :</string>
+           </property>
+          </widget>
+          <widget class="QLineEdit" name="edtTxtTotal">
+           <property name="geometry">
+            <rect>
+             <x>100</x>
+             <y>40</y>
+             <width>191</width>
+             <height>25</height>
+            </rect>
+           </property>
+           <property name="readOnly">
+            <bool>true</bool>
            </property>
           </widget>
          </widget>
@@ -226,17 +261,42 @@
            </property>
            <item>
             <property name="text">
-             <string>item</string>
+             <string>Articulo</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>cantidad</string>
+             <string>Litros</string>
             </property>
            </item>
            <item>
             <property name="text">
-             <string>valor</string>
+             <string>Color</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Precio_fabrica</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Costo</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Precio_max</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Ganancia</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
+             <string>Descuento</string>
             </property>
            </item>
           </widget>
@@ -280,10 +340,10 @@
            <bool>false</bool>
           </property>
           <attribute name="horizontalHeaderCascadingSectionResizes">
-           <bool>false</bool>
+           <bool>true</bool>
           </attribute>
           <attribute name="horizontalHeaderDefaultSectionSize">
-           <number>200</number>
+           <number>57</number>
           </attribute>
           <attribute name="horizontalHeaderHighlightSections">
            <bool>false</bool>
