--- a/StockCoco/mainwindow.ui
+++ b/StockCoco/mainwindow.ui
@@ -108,7 +108,7 @@
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tabCarrito">
        <attribute name="title">
@@ -146,7 +146,7 @@
           <property name="minimumSize">
            <size>
             <width>0</width>
-            <height>76</height>
+            <height>90</height>
            </size>
           </property>
           <property name="title">
@@ -156,7 +156,7 @@
            <property name="geometry">
             <rect>
              <x>640</x>
-             <y>40</y>
+             <y>56</y>
              <width>111</width>
              <height>25</height>
             </rect>
@@ -168,8 +168,8 @@
           <widget class="QPushButton" name="btnComprar">
            <property name="geometry">
             <rect>
-             <x>430</x>
-             <y>40</y>
+             <x>399</x>
+             <y>56</y>
              <width>131</width>
              <height>25</height>
             </rect>
@@ -182,7 +182,7 @@
            <property name="geometry">
             <rect>
              <x>10</x>
-             <y>44</y>
+             <y>60</y>
              <width>61</width>
              <height>17</height>
             </rect>
@@ -195,13 +195,26 @@
            <property name="geometry">
             <rect>
              <x>100</x>
-             <y>40</y>
+             <y>56</y>
              <width>191</width>
              <height>25</height>
             </rect>
            </property>
            <property name="readOnly">
             <bool>true</bool>
+           </property>
+          </widget>
+          <widget class="QCheckBox" name="chkDescuento">
+           <property name="geometry">
+            <rect>
+             <x>10</x>
+             <y>26</y>
+             <width>141</width>
+             <height>23</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Aplica Descuento</string>
            </property>
           </widget>
          </widget>
@@ -379,7 +392,7 @@
           <widget class="QPushButton" name="btnAddCarrito">
            <property name="geometry">
             <rect>
-             <x>350</x>
+             <x>343</x>
              <y>160</y>
              <width>131</width>
              <height>25</height>
@@ -658,7 +671,7 @@
           <widget class="QPushButton" name="btnEditarItem">
            <property name="geometry">
             <rect>
-             <x>500</x>
+             <x>566</x>
              <y>160</y>
              <width>111</width>
              <height>25</height>
@@ -794,7 +807,7 @@
           <property name="minimumSize">
            <size>
             <width>0</width>
-            <height>200</height>
+            <height>229</height>
            </size>
           </property>
           <property name="frameShape">
@@ -803,10 +816,367 @@
           <property name="frameShadow">
            <enum>QFrame::Raised</enum>
           </property>
+          <widget class="QLineEdit" name="edtTxtDescuentoEditar">
+           <property name="geometry">
+            <rect>
+             <x>390</x>
+             <y>147</y>
+             <width>91</width>
+             <height>25</height>
+            </rect>
+           </property>
+           <property name="readOnly">
+            <bool>false</bool>
+           </property>
+          </widget>
+          <widget class="QPushButton" name="btnEliminar">
+           <property name="geometry">
+            <rect>
+             <x>511</x>
+             <y>187</y>
+             <width>111</width>
+             <height>25</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Eliminar</string>
+           </property>
+          </widget>
+          <widget class="QLineEdit" name="edtTxtArt">
+           <property name="geometry">
+            <rect>
+             <x>100</x>
+             <y>47</y>
+             <width>141</width>
+             <height>25</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="frame">
+            <bool>true</bool>
+           </property>
+           <property name="readOnly">
+            <bool>true</bool>
+           </property>
+          </widget>
+          <widget class="QLabel" name="lblLitros">
+           <property name="geometry">
+            <rect>
+             <x>250</x>
+             <y>47</y>
+             <width>51</width>
+             <height>20</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Litros :</string>
+           </property>
+          </widget>
+          <widget class="QLabel" name="lblTituloPreciosEditar">
+           <property name="geometry">
+            <rect>
+             <x>20</x>
+             <y>87</y>
+             <width>67</width>
+             <height>17</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>PRECIOS:</string>
+           </property>
+          </widget>
+          <widget class="QLabel" name="lblGananciaEditar">
+           <property name="geometry">
+            <rect>
+             <x>74</x>
+             <y>150</y>
+             <width>101</width>
+             <height>17</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Ganancia [%] : </string>
+           </property>
+          </widget>
+          <widget class="QLineEdit" name="edtTxtLitros">
+           <property name="enabled">
+            <bool>true</bool>
+           </property>
+           <property name="geometry">
+            <rect>
+             <x>300</x>
+             <y>47</y>
+             <width>71</width>
+             <height>25</height>
+            </rect>
+           </property>
+           <property name="readOnly">
+            <bool>true</bool>
+           </property>
+          </widget>
+          <widget class="QLabel" name="lblColor">
+           <property name="geometry">
+            <rect>
+             <x>385</x>
+             <y>51</y>
+             <width>51</width>
+             <height>17</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Color :</string>
+           </property>
+          </widget>
+          <widget class="QLabel" name="lblDeVentaEditar">
+           <property name="geometry">
+            <rect>
+             <x>292</x>
+             <y>122</y>
+             <width>91</width>
+             <height>17</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>De venta [$] :</string>
+           </property>
+          </widget>
+          <widget class="QLabel" name="lblValorEditar">
+           <property name="geometry">
+            <rect>
+             <x>510</x>
+             <y>150</y>
+             <width>71</width>
+             <height>17</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Valor [$] :</string>
+           </property>
+          </widget>
+          <widget class="QLabel" name="lblDescEditar">
+           <property name="geometry">
+            <rect>
+             <x>276</x>
+             <y>150</y>
+             <width>111</width>
+             <height>17</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Descuento [%] : </string>
+           </property>
+          </widget>
+          <widget class="QLabel" name="lblMaximoEditar">
+           <property name="geometry">
+            <rect>
+             <x>492</x>
+             <y>122</y>
+             <width>91</width>
+             <height>17</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Máximo [$] :</string>
+           </property>
+          </widget>
+          <widget class="QLineEdit" name="edtTxtDeVentaEditar">
+           <property name="geometry">
+            <rect>
+             <x>390</x>
+             <y>117</y>
+             <width>91</width>
+             <height>25</height>
+            </rect>
+           </property>
+           <property name="readOnly">
+            <bool>false</bool>
+           </property>
+          </widget>
+          <widget class="QLineEdit" name="edtTxtMaximoEditar">
+           <property name="geometry">
+            <rect>
+             <x>583</x>
+             <y>117</y>
+             <width>91</width>
+             <height>25</height>
+            </rect>
+           </property>
+           <property name="readOnly">
+            <bool>false</bool>
+           </property>
+          </widget>
+          <widget class="QLineEdit" name="edtTxtColor">
+           <property name="geometry">
+            <rect>
+             <x>436</x>
+             <y>47</y>
+             <width>71</width>
+             <height>25</height>
+            </rect>
+           </property>
+           <property name="readOnly">
+            <bool>true</bool>
+           </property>
+          </widget>
+          <widget class="QPushButton" name="btnGuardar">
+           <property name="geometry">
+            <rect>
+             <x>137</x>
+             <y>187</y>
+             <width>131</width>
+             <height>25</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Guardar</string>
+           </property>
+          </widget>
+          <widget class="QLineEdit" name="edtTxtDeFabricaEditar">
+           <property name="geometry">
+            <rect>
+             <x>180</x>
+             <y>117</y>
+             <width>91</width>
+             <height>25</height>
+            </rect>
+           </property>
+           <property name="readOnly">
+            <bool>false</bool>
+           </property>
+          </widget>
+          <widget class="QLabel" name="lblArt">
+           <property name="geometry">
+            <rect>
+             <x>30</x>
+             <y>51</y>
+             <width>61</width>
+             <height>20</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Artículo :</string>
+           </property>
+          </widget>
+          <widget class="QLineEdit" name="edtTxtValorEditar">
+           <property name="geometry">
+            <rect>
+             <x>583</x>
+             <y>147</y>
+             <width>91</width>
+             <height>25</height>
+            </rect>
+           </property>
+           <property name="readOnly">
+            <bool>false</bool>
+           </property>
+          </widget>
+          <widget class="QLabel" name="lblAvisoEditar">
+           <property name="geometry">
+            <rect>
+             <x>540</x>
+             <y>87</y>
+             <width>251</width>
+             <height>17</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+          </widget>
+          <widget class="QLabel" name="lblDeFabricaEditar">
+           <property name="geometry">
+            <rect>
+             <x>70</x>
+             <y>122</y>
+             <width>101</width>
+             <height>17</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>De fábrica [$] : </string>
+           </property>
+          </widget>
+          <widget class="QLineEdit" name="edtTxtGananciaEditar">
+           <property name="geometry">
+            <rect>
+             <x>180</x>
+             <y>147</y>
+             <width>91</width>
+             <height>25</height>
+            </rect>
+           </property>
+           <property name="readOnly">
+            <bool>false</bool>
+           </property>
+          </widget>
+          <widget class="QRadioButton" name="radEditar">
+           <property name="geometry">
+            <rect>
+             <x>30</x>
+             <y>10</y>
+             <width>131</width>
+             <height>23</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Editar Artículo</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
+           </property>
+          </widget>
+          <widget class="QRadioButton" name="radNuevo">
+           <property name="geometry">
+            <rect>
+             <x>190</x>
+             <y>10</y>
+             <width>131</width>
+             <height>23</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Nuevo Artículo</string>
+           </property>
+          </widget>
+          <widget class="QLabel" name="lblCantStockEditar">
+           <property name="geometry">
+            <rect>
+             <x>515</x>
+             <y>52</y>
+             <width>51</width>
+             <height>17</height>
+            </rect>
+           </property>
+           <property name="text">
+            <string>Stock :</string>
+           </property>
+          </widget>
+          <widget class="QLineEdit" name="edtTxtCantStockEditar">
+           <property name="geometry">
+            <rect>
+             <x>570</x>
+             <y>48</y>
+             <width>91</width>
+             <height>25</height>
+            </rect>
+           </property>
+           <property name="readOnly">
+            <bool>false</bool>
+           </property>
+          </widget>
          </widget>
         </item>
         <item>
-         <widget class="QTableView" name="tblEditar"/>
+         <widget class="QTableView" name="tblEditar">
+          <property name="selectionMode">
+           <enum>QAbstractItemView::SingleSelection</enum>
+          </property>
+          <property name="selectionBehavior">
+           <enum>QAbstractItemView::SelectRows</enum>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
